# pyspark_project

./: bootstrap.sh  pyproject.toml
src/: pyspark_pipeline.py
